--- a/banana.css
+++ b/banana.css
@@ -1,3 +1,13 @@
-.textstyle {
-    padding: 2 rem;
+.name {
+  border: 30px solid grey;
+  border-radius: 2rem;
+  background-color: grey;
+  text-align: center;
+  font-weight: 900;
+  font-style: oblique;
+  color: white;
+}
+
+.text2 {
+  color: tomato;
 }
